syntax = "proto3";
package babylon.epoching.v1;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "cosmos/staking/v1beta1/tx.proto";

option go_package = "github.com/babylonchain/babylon/x/epoching/types";

message Epoch {
  uint64 epoch_number = 1;
  uint64 current_epoch_interval = 2;
  uint64 first_block_height = 3;
}

// QueuedMessage is a message that can change the validator set and is delayed to the epoch boundary
message QueuedMessage {
  // tx_id is the ID of the tx that contains the message
  bytes tx_id = 1;
  // msg_id is the original message ID, i.e., hash of the marshaled message
  bytes msg_id = 2;
  // block_height is the height when this msg is submitted to Babylon
  uint64 block_height = 3;
  // block_time is the timestamp when this msg is submitted to Babylon
  google.protobuf.Timestamp block_time = 4 [(gogoproto.stdtime) = true];
  // msg is the actual message that is sent by a user and is queued by the epoching module
  oneof msg {
    cosmos.staking.v1beta1.MsgCreateValidator msg_create_validator = 5;
    cosmos.staking.v1beta1.MsgDelegate msg_delegate = 6;
    cosmos.staking.v1beta1.MsgUndelegate msg_undelegate = 7;
    cosmos.staking.v1beta1.MsgBeginRedelegate msg_begin_redelegate = 8;
    // TODO: after we bump to Cosmos SDK v0.46, add MsgCancelUnbondingDelegation
  }
}

message QueuedMessageList {
  uint64 epoch_number = 1;
  repeated QueuedMessage msgs = 2;
}

enum BondState {
  CREATED = 0;
  BONDED = 1;
  UNBONDING = 2;
  UNBONDED = 3;
  REMOVED = 4;
}

message ValStateUpdate {
  BondState state = 1;
  uint64 block_height = 2;
  google.protobuf.Timestamp block_time = 3 [(gogoproto.stdtime) = true];
}

message ValidatorLifecycle {
  string val_addr = 1;
  repeated ValStateUpdate val_life = 2;
}

message DelegationStateUpdate {
  BondState state = 1;
  string val_addr = 2;
  uint64 block_height = 3;
  google.protobuf.Timestamp block_time = 4 [(gogoproto.stdtime) = true];
}

message DelegationLifecycle {
  string del_addr = 1;
  repeated DelegationStateUpdate del_life = 2;
}
